[gd_scene load_steps=10 format=3 uid="uid://b4cu3ihy5hegm"]

[ext_resource type="Script" path="res://FishCatchUIStuff/fish_catch_UI.gd" id="1_mgi7o"]
[ext_resource type="Texture2D" uid="uid://bwklc3batpott" path="res://Inventory/inventoryBackground.png" id="2_5f8qv"]
[ext_resource type="Texture2D" uid="uid://cmxxnp5l6fpls" path="res://Inventory/inventorySlot.png" id="3_83meb"]
[ext_resource type="FontFile" uid="uid://dwvnucq3ajek6" path="res://fonts/a.ttf" id="4_f202a"]
[ext_resource type="Texture2D" uid="uid://bqd63ntyrm16k" path="res://assets/coin.png" id="5_loehd"]
[ext_resource type="Texture2D" uid="uid://uf6e13xotbsf" path="res://assets/training-8494.png" id="6_bl6vj"]
[ext_resource type="Texture2D" uid="uid://cncn1lkr6pl1x" path="res://shopStuff/shopAssets/closeMenuButton.png" id="6_wccbk"]

[sub_resource type="Theme" id="Theme_t1xiw"]
default_font = ExtResource("4_f202a")
default_font_size = 5

[sub_resource type="Theme" id="Theme_q0ni2"]
default_font = ExtResource("4_f202a")
default_font_size = 4

[node name="FishCatchUI" type="Control"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchor_right = 0.156
anchor_bottom = 0.417
offset_right = 0.159996
offset_bottom = -0.12001
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgi7o")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(100, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5f8qv")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="MainPanel" type="Panel" parent="NinePatchRect/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="FishFrame" type="Panel" parent="NinePatchRect/MarginContainer/MainPanel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.322
anchor_right = 0.678
anchor_bottom = 0.246
offset_left = 0.0199966
offset_right = -0.0200043
offset_bottom = 0.0199986
grow_horizontal = 2

[node name="Sprite2D" type="Sprite2D" parent="NinePatchRect/MarginContainer/MainPanel/FishFrame"]
scale = Vector2(2, 2)
centered = false

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/MarginContainer/MainPanel"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 35.0
offset_right = 32.0
offset_bottom = 51.0
grow_horizontal = 2
texture = ExtResource("3_83meb")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/MainPanel/NinePatchRect"]
custom_minimum_size = Vector2(64, 14)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.062
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.00799996
offset_bottom = -1.0
grow_horizontal = 2
theme_override_constants/separation = -1

[node name="FishName" type="Label" parent="NinePatchRect/MarginContainer/MainPanel/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_t1xiw")
text = "Clown Fish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FishRarity" type="Label" parent="NinePatchRect/MarginContainer/MainPanel/NinePatchRect/VBoxContainer"]
self_modulate = Color(0.998181, 0.000830159, 0.998945, 1)
layout_mode = 2
theme = SubResource("Theme_q0ni2")
text = "(Epic)
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/MainPanel"]
custom_minimum_size = Vector2(90, 60)
layout_mode = 0
offset_top = 67.0
offset_right = 90.0
offset_bottom = 130.0
theme_override_constants/separation = 5

[node name="Stat1" type="NinePatchRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(90, 12)
layout_mode = 2
texture = ExtResource("3_83meb")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat1"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
anchor_left = 0.022
anchor_top = 0.167
anchor_right = 0.111
anchor_bottom = 0.833
offset_left = 0.0199999
offset_top = -0.00400019
offset_right = 0.00999928
offset_bottom = 0.00399971
texture = ExtResource("5_loehd")
expand_mode = 4

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.167
anchor_right = 0.533
anchor_bottom = 0.833
offset_left = -0.0299988
offset_top = -0.00400019
offset_right = 0.029995
offset_bottom = 0.00399971
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_f202a")
theme_override_font_sizes/font_size = 5
text = "10"

[node name="Stat2" type="NinePatchRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(90, 12)
layout_mode = 2
texture = ExtResource("3_83meb")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat2"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
anchor_left = 0.022
anchor_top = 0.167
anchor_right = 0.111
anchor_bottom = 0.833
offset_left = 0.0199999
offset_top = -0.00400019
offset_right = 0.00999928
offset_bottom = 0.00399971
expand_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.167
anchor_right = 0.533
anchor_bottom = 0.833
offset_left = -0.0299988
offset_top = -0.00400019
offset_right = 0.029995
offset_bottom = 0.00399971
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_f202a")
theme_override_font_sizes/font_size = 5
text = "10"

[node name="Stat3" type="NinePatchRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(90, 12)
layout_mode = 2
texture = ExtResource("3_83meb")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat3"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
anchor_left = 0.011
anchor_right = 0.144
anchor_bottom = 1.0
offset_left = 0.00999993
offset_right = 0.039999
texture = ExtResource("6_bl6vj")
expand_mode = 4

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.167
anchor_right = 0.533
anchor_bottom = 0.833
offset_left = -0.0299988
offset_top = -0.00400019
offset_right = 0.029995
offset_bottom = 0.00399971
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_f202a")
theme_override_font_sizes/font_size = 5
text = "10"

[node name="Stat4" type="NinePatchRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(90, 12)
layout_mode = 2
texture = ExtResource("3_83meb")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat4"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
anchor_left = 0.022
anchor_top = 0.167
anchor_right = 0.111
anchor_bottom = 0.833
offset_left = 0.0199999
offset_top = -0.00400019
offset_right = 0.00999928
offset_bottom = 0.00399971
expand_mode = 4

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/MainPanel/VBoxContainer/Stat4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.167
anchor_right = 0.533
anchor_bottom = 0.833
offset_left = -0.0299988
offset_top = -0.00400019
offset_right = 0.029995
offset_bottom = 0.00399971
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_f202a")
theme_override_font_sizes/font_size = 5
text = "10"

[node name="CloseShopPanel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_bottom = 15.0
grow_horizontal = 0

[node name="Sprite2D" type="Sprite2D" parent="CloseShopPanel"]
texture = ExtResource("6_wccbk")
centered = false
offset = Vector2(6.5, -7.7)

[node name="CloseShopPanelButton" type="Button" parent="CloseShopPanel/Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(15, 15)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -8.0
offset_right = 6.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CloseShopPanel/Sprite2D/CloseShopPanelButton" to="." method="_on_close_shop_panel_button_pressed"]
